--- a/tvShows.html
+++ b/tvShows.html
@@ -11,7 +11,7 @@
     </style>
     <link rel="stylesheet" href="movieStyles.css">
 </head>
-<header style="margin-left:45%;font-size:larger"><h1>Movie Agreement</h1></header>
+<header style="margin-left:45%;font-size:larger"><h1>TV Shows Agreement</h1></header>
 <body>
     <h1 style="margin-top:4.5%;margin-left:42%;font-size:50px">We The Children</h1>
     <nav><a href="index.html" >Home</a></nav>
