--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 that we will behave after 
 movies. </p>
     <form action="tvShows.html">
-        <button type="submit" class="agreementCard" id="movieBtn"><pre><h1 style="margin-left:8%;font-size: 20px;">TV Shows Agreement</a>
+        <button type="submit" class="agreementCard" id="tvShowBtn"><pre><h1 style="margin-left:8%;font-size: 20px;">TV Shows Agreement</a>
         <p style="text-align: center;font-size: large;margin-top: 10%;margin-left: -7.5%;">A Parent-Children agreement
     that we will only ask
     for the allowed number
